--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@list, @ingredient] do |f| %>
+<%= simple_form_for (@ingredient) do |f| %>
   <%= f.input :name %>
-  <%= f.submit "add a ingredient", class: "btn btn-primary" %>
+  <%= f.submit "add", class: "btn btn-primary" %>
 <% end %>
