--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,15 +6,13 @@
       <button type="button" class="btn btn-default">All</button>
       <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
       <ul class="dropdown-menu">
-          <li><%= link_to "All", "#" %></li> <!-- ingredients_path -->
-          <li class="divider"></li>
-          <% @lists.each do |list| %>
+        <li><%= link_to "All","#" %></li> <!-- ingredients_path -->
+        <% @lists.each do |list| %>
           <li>
-            <%= link_to "#" do %> <!-- list_path(@list) -->
+            <%= link_to list_path(@list) do %> <!-- list_path(@list) -->
               <p><%= list.name %><p>
             <% end %>
           </li>
-          <li class="divider"></li>
           <% end %>
       </ul>
   </div>
@@ -23,8 +21,6 @@
 
 
   <div class="btn btn-primary">
-    <%= link_to new_list_path do %>
-      <p> Create a list</p>
-    <% end %>
+    <%= link_to "Create a list", new_list_path %>
   </div>
 </div>
