proceeding with the first models

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,15 @@
-<h2><%= @list.name %></h2>
+<h2>
+  <%= @list.name %>
+</h2>
+
 <ul>
-<% @ingredients.each do |ingredient| %>
+<% @list.ingredients.each do |ingredient| %>
   <li><%= ingredient.name %></li>
 <% end %>
 </ul>
+
+<div class="btn btn-primary">
+    <%= link_to new_list_ingredient_path(@list) do %>
+      <p> Add an igredient</p>
+    <% end %>
+  </div>
