--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,25 +6,26 @@
       <button type="button" class="btn btn-default">All</button>
       <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
       <ul class="dropdown-menu">
-          <li><%= link_to "All", "#" %></li> <!-- ingredients_path -->
-          <li class="divider"></li>
-          <% @lists.each do |list| %>
           <li>
-            <%= link_to "#" do %> <!-- list_path(@list) -->
-              <p><%= list.name %><p>
-            <% end %>
+             <%= link_to "All", "#" %>
           </li>
-          <li class="divider"></li>
+          <% @lists.each do |li| %>
+            <li>
+              <%= link_to list_path(li) do %>
+                <p><%= li.name %></p>
+              <% end %>
+            </li>
           <% end %>
       </ul>
   </div>
-<br>
-<br>
 
+<br>
+<br>
 
   <div class="btn btn-primary">
     <%= link_to new_list_path do %>
       <p> Create a list</p>
     <% end %>
   </div>
+
 </div>
