--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,15 +1,10 @@
 <h2> Create a list </h2>
 
-<%= form_for(@list, url: list_path(@list)) do |f| %>
-  <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
-  </div>
+<%= simple_form_for (@list) do |f| %>
+  <%= f.error_notification %>
 
-  <div class="form-group">
-    <%= f.label :ingredient %>
-    <%= f.text_field :ingredient, class: 'form-control' %>
-  </div>
+  <%= f.input :name, label: 'Name your list', input_html: { style: "display: none;"} %>
+  <%= f.input :name, placeholder: 'e.g. Birthday lunch', label: false, input_html: { id: "nameInput", class: "hidden" } %>
 
   <%= f.submit class: 'btn btn-primary' %>
 <% end %>
