--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to SmartGrocery</h1>
-<p>This is the home page</p>
+<div class="content">
+  <h1>Welcome to SmartGrocery</h1>
+  <p>This is the home page</p>
+</div>
