--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -23,7 +23,7 @@
     </div>
   <% end %>
 
-  <%= link_to "#" do %>
+  <%= link_to recipes_path do %>
     <div class="item-container">
       <div class="icon">
         <i class="fas fa-utensils"></i>
