--- a/app/views/ingredients/bought.html.erb
+++ b/app/views/ingredients/bought.html.erb
@@ -1,7 +1,11 @@
-<h2>Items you bought</h2>
+<div class="content">
 
-<ul>
-  <% @bought_ingredients.each do |ingredient| %>
-  <li><%= ingredient.name %></li>
-  <% end %>
-</ul>
+  <h2>Items you bought</h2>
+
+  <ul>
+    <% @bought_ingredients.each do |ingredient| %>
+    <li><%= ingredient.name %></li>
+    <% end %>
+  </ul>
+
+</div>
