Final result, to continue working but submitted

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,13 @@
 body{
   background-color: white;
   position: relative;
-  height: 100vh;
 
 }
 
 .content{
-  margin: 20px 40px;
+  margin: 20px 40px;;
+}
+
+.content ul {
+  margin-left: -40px;
 }
