--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [@list, @ingredient] do |f| %>
 
-  <%= f.input :name, placeholder: "carrots" %>
-  <%= f.submit "Add ingredient", class: "btn btn-primary" %>
+  <%= f.input :name, placeholder: "carrots", label: "Add  ingredient"  %>
+  <%= f.submit "Add", class: "btn btn-primary" %>
 <% end %>
 
