--- a/app/assets/stylesheets/pages/_list_index.scss
+++ b/app/assets/stylesheets/pages/_list_index.scss
@@ -19,4 +19,17 @@
   }
 }
 
+.each-ing{
+  background-color: #F5F5F5 !important;
+  border: 1px solid #808080;
+  text-align: right;
+  padding: 10px 20px;
+  vertical-align: center;
+  margin: 5px 0;
+  border-radius: 5px;
+  .definition{
+    font-size: 12px;
+    color: #808080
+  }
+}
 
