--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-<div class="list-index">
+<div class=" list-index content">
     <h2>Your lists</h2>
 
 
@@ -7,7 +7,7 @@
       <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
       <ul class="dropdown-menu">
           <li>
-             <%= link_to "All", "#" %>
+             <%= link_to "All", lists_path %>
           </li>
           <% @lists.each do |li| %>
             <li>
@@ -28,4 +28,28 @@
     <% end %>
   </div>
 
+
+  <ul>
+    <% @lists.each do |list| %>
+      <% list.ingredients.each do |ing|%>
+        <div class="each-ing">
+          <li style="list-style-type:none;">
+            <%= ing.name %>
+              <span class="definition">for (<%= list.name %>)</span> &nbsp;&nbsp;
+            <% if ing.bought == false %>
+              <i class="far fa-square box"></i>
+            <% else %>
+              <i class="far fa-check-square box"></i>
+            <% end %>
+          </li>
+        </div>
+      <% end %>
+    <% end %>
+  </ul>
+
 </div>
+
+<br>
+<br>
+<br>
+<br>
