--- a/app/views/pages/recipes.html.erb
+++ b/app/views/pages/recipes.html.erb
@@ -3,6 +3,7 @@
   <div class="text-center">
     <form id="search-recipes" class="form-inline">
       <input type="text" id="keyword" class="form-control" placeholder="Find recipes">
+      <div class="spacing"></div>
       <input type="submit" class="btn btn-primary" value="Search">
     </form>
 
@@ -10,3 +11,8 @@
   </div>
 
 </div>
+
+<br>
+<br>
+<br>
+<br>
