bought works on show now, stuck with recipes find

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -34,7 +34,7 @@
       <% list.ingredients.each do |ing|%>
         <div class="each-ing">
           <li style="list-style-type:none;">
-            <%= ing.name %>
+            <span id="tobuy" class="item-tobuy"><%= ing.name %></span>
               <span class="definition">for (<%= list.name %>)</span> &nbsp;&nbsp;
             <% if ing.bought == false %>
               <i class="far fa-square box"></i>
