--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -19,7 +19,7 @@
 
 li {
     display: list-item;
-    text-align: -webkit-match-parent;
+
 }
 
 .dropdown-menu>li>a {
@@ -29,4 +29,8 @@ li {
     font-weight: 400;
     line-height: 1.42857143;
     color: #333;
+}
+
+.initial-navbar{
+  text-align: right;
 }
