--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,8 +10,8 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class= "nav-item "><%= link_to "Log in", new_user_session_path, class: "nav-link"%> </li>
-          <li class= "nav-item"><%= link_to "Sign up", new_user_registration_path, class: "nav-link" %> </li>
+          <li class= "nav-item initial-navbar"><%= link_to "Log in", new_user_session_path, class: "nav-link"%> </li>
+          <li class= "nav-item initial-navbar"><%= link_to "Sign up", new_user_registration_path, class: "nav-link" %> </li>
         </ul>
       </div>
     <% else %>
